--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "twitter-hack-cu",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.twitter.com/2/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
